# study_system_client

./: .gitignore  CMakeLists.txt
src/: singleton.h
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/client/src/application/: application.cpp  application.h
src/client/src/windows/main_window/: main_window.cpp  main_window.h
src/libResources/: CMakeLists.txt
src/libResources/src/: export_resources.h
src/libResources/src/exceptions/: exception.h
src/libResources/src/exceptions/file_access/: file_access.cpp  file_access.h
src/libResources/src/files/directory/: directory.cpp  directory.h
src/libResources/src/files/file/: file.cpp  file.h
src/libResources/src/files/localization_file/: localization_file.cpp  localization_file.h
src/libResources/src/fonts/: fonts.cpp  fonts.h
src/libResources/src/localizations/: localizations.cpp  localizations.h
src/libResources/src/localizations/locale/: locale.cpp  locale.h
src/libResources/src/resources/: resources.cpp  resources.h
src/libResources/src/styles/: styles.cpp  styles.h
